set indexes and optionals, adapt import methods